--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,5 @@ override.tf.json
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/git,node,terraform,vscode
+
+certs
