--- a/aws/.prettierrc
+++ b/aws/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "printWidth": 100,
-  "semi": true,
+  "printWidth": 120,
+  "semi": false,
   "singleQuote": true,
   "trailingComma": "es5"
 }
