--- a/aws/package.json
+++ b/aws/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -w",
-    "dev": "nodemon src/index.ts -- -e a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com -r ./certs/root-CA.crt -c ./certs/temp_sensor_1.cert.pem -k ./certs/temp_sensor_1.private.key -C sdk-nodejs-5dff24b9-16b2-4d24-aaff-2365f86a5757 -t topic_1",
+    "dev": "nodemon src/index.ts -- -s eu-central-1 -e a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com -r ./certs/root-CA.crt -c ./certs/temp_sensor_1.cert.pem -k ./certs/temp_sensor_1.private.key -C sdk-nodejs-5dff24b9-16b2-4d24-aaff-2365f86a5757 -t topic_1",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint --ext .ts ./src",
@@ -26,6 +26,11 @@
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
