--- a/aws/package.json
+++ b/aws/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -w",
-    "dev": "nodemon src/index.ts -- -s eu-central-1 -e a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com -r ./certs/root-CA.crt -c ./certs/temp_sensor_1.cert.pem -k ./certs/temp_sensor_1.private.key -C sdk-nodejs-5dff24b9-16b2-4d24-aaff-2365f86a5757 -t topic_1",
+    "dev": "nodemon src/index.ts -- -d http://localhost:9292/gpios/led_green -s eu-central-1 -e a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com -r ./certs/root-CA.crt -c ./certs/temp_sensor_1.cert.pem -k ./certs/temp_sensor_1.private.key -C sdk-nodejs-5dff24b9-16b2-4d24-aaff-2365f86a5757 -t topic_1",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint --ext .ts ./src",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
+    "@types/node-fetch": "^2.5.10",
     "@types/yargs": "^16.0.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
