--- a/aws/package.json
+++ b/aws/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "aws-sample",
+  "name": "aws-emulator-bridge",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A bridge between a gpio emulator running a REST API and AWS IoT",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -w",
+    "build": "tsc",
+    "build:watch": "tsc -w",
     "dev": "nodemon src/index.ts -- -d http://localhost:9292/gpios/led_green -s eu-central-1 -e a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com -r ./certs/root-CA.crt -c ./certs/temp_sensor_1.cert.pem -k ./certs/temp_sensor_1.private.key -C sdk-nodejs-5dff24b9-16b2-4d24-aaff-2365f86a5757 -t topic_1",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,10 +29,6 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^5.0.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
