--- a/aws/package.json
+++ b/aws/package.json
@@ -32,7 +32,6 @@
     "eslint-config-standard": "^16.0.2",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "lint-staged": "^11.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
@@ -40,11 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run format && npm run lint"
     }
-  },
-  "lint-staged": {
-    "*.ts": "eslint --ext .ts ./src",
-    "*.+(ts|json)": "prettier --write './**/*.+(js|ts|json)'"
   }
 }
