--- a/aws/package.json
+++ b/aws/package.json
@@ -31,6 +31,7 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
