--- a/aws/package.json
+++ b/aws/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watch",
     "lint": "eslint --ext .ts ./src",
     "format": "prettier --write './**/*.+(js|ts|json)'",
-    "prepare": "cd .. && husky install aws/.husky"
+    "prepare": "cd .. && husky install aws/.husky",
+    "doc": "typedoc src"
   },
   "author": "",
   "license": "ISC",
@@ -37,6 +38,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   }
 }
