--- a/aws/package.json
+++ b/aws/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint --ext .ts ./src",
-    "format": "prettier --write './**/*.+(js|ts|json)'",
+    "format": "prettier --write './src/**/*.+(js|ts|json)'",
     "prepare": "cd .. && husky install aws/.husky",
     "doc": "typedoc src"
   },
