remove my actual arn...

--- a/aws/.env.sample
+++ b/aws/.env.sample
@@ -1,4 +1,4 @@
-AWS_ENDPOINT=a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com
+AWS_ENDPOINT=<your-iot-arn-here>.iot.eu-central-1.amazonaws.com>
 AWS_REGION=eu-central-1
 AWS_ROOT_CA=./certs/root-CA.crt
 AWS_CERT=./certs/temp_sensor_1.cert.pem
