--- a/aws/package.json
+++ b/aws/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .ts ./src",
     "format": "prettier --write './src/**/*.+(js|ts|json)'",
     "prepare": "cd .. && husky install aws/.husky",
-    "doc": "typedoc src --theme minimal"
+    "doc": "typedoc src"
   },
   "author": "",
   "license": "ISC",
