update dockerfile and compose

--- a/aws/Dockerfile
+++ b/aws/Dockerfile
@@ -17,4 +17,4 @@ ENV NODE_ENV production
 
 RUN npm run build
 
-CMD ["node", "./dist", "-d", "http://emulator:9292/gpios/led_green", "-s", "eu-central-1", "-e", "a2rkqhd4hxz5py-ats.iot.eu-central-1.amazonaws.com", "-r", "/certs/root-CA.crt", "-c", "/certs/temp_sensor_1.cert.pem", "-k", "/certs/temp_sensor_1.private.key", "-C", "sdk-nodejs-5dff24b9-16b2-4d24-aaff-2365f86a5757", "-t", "topic_1"]
+CMD ["node", "./dist"]
