--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,10 @@ services:
     image: csiot/bridge
     build: ./aws
     volumes:
-      - "./aws/certs:/certs:ro"
+      - "./aws/certs:/app/certs:ro"
+    depends_on:
+      - emulator
+    env_file: ./aws/.env
+    environment:
+      # override setting from .env file since we can reach the container under its name, not via localhost
+      - DEVICE_ENDPOINT=http://emulator:9292/gpios/led_green
