--- a/aws/package.json
+++ b/aws/package.json
@@ -37,6 +37,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
