--- a/aws/package.json
+++ b/aws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-emulator-bridge",
+  "name": "aws-device-connector",
   "version": "1.0.0",
   "description": "A bridge between a gpio emulator running a REST API and AWS IoT",
   "main": "dist/index.js",
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .ts ./src",
     "format": "prettier --write './src/**/*.+(js|ts|json)'",
     "prepare": "cd .. && husky install aws/.husky",
-    "doc": "typedoc src --exclude '**/*+(index|.test|.e2e).ts'"
+    "doc": "typedoc src --exclude '**/*+(index|.test|.e2e).ts' --name 'AWS Device Connector'"
   },
   "author": "",
   "license": "ISC",
