--- a/aws/package.json
+++ b/aws/package.json
@@ -20,6 +20,7 @@
     "aws-iot-device-sdk-v2": "^1.4.7",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
+    "winston": "^3.3.3",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
