--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "emulator"]
 	path = emulator
-	url = git@gitlab.mi.hdm-stuttgart.de:csiot-tools/emulator.git
+	url = https://gitlab.mi.hdm-stuttgart.de/csiot-tools/emulator.git
