--- a/aws/package.json
+++ b/aws/package.json
@@ -10,9 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint --ext .ts ./src",
-    "format": "prettier --write './src/**/*.+(js|ts|json)'",
+    "format": "prettier --write './src/**/*.+{js,ts,json}'",
     "prepare": "cd .. && husky install aws/.husky",
-    "doc": "typedoc src --exclude '**/*+(index|.test|.e2e).ts' --name 'AWS Device Connector'"
+    "doc": "typedoc src --exclude '**/*+{index,.test,.e2e}.ts' --name 'AWS Device Connector'"
   },
   "author": "",
   "license": "ISC",
