--- a/aws/.env.sample
+++ b/aws/.env.sample
@@ -1,7 +1,7 @@
 AWS_ENDPOINT=<your-iot-arn-here>.iot.eu-central-1.amazonaws.com>
 AWS_REGION=eu-central-1
-AWS_ROOT_CA=./certs/root-CA.crt
-AWS_CERT=./certs/temp_sensor_1.cert.pem
-AWS_PRIVATE_KEY=./certs/temp_sensor_1.private.key
+AWS_ROOT_CA=/app/certs/root-CA.crt
+AWS_CERT=/app/certs/client/cert.pem
+AWS_PRIVATE_KEY=/app/certs/client/private.key
 AWS_THING_NAME=temperature
 DEVICE_ENDPOINT=http://localhost:9292/gpios/led_green
