--- a/emulator-config.yaml
+++ b/emulator-config.yaml
@@ -5,6 +5,11 @@ gpios:
     state:
       'on': false
       color: tomato
+  humidifier:
+    type: led
+    state:
+      'on': false
+      color: hotpink
   fan:
     type: led
     state:
